--- a/res/values/app.xml
+++ b/res/values/app.xml
@@ -6,6 +6,6 @@
     <string name="app_version">0.0.1</string>
     <string name="app_copyright">© 2012 Patrik Karlsson</string>
     <string name="app_email">patrik@trixon.se</string>
-    <string name="about">Version %1$s\nCopyright %2$s</string>
+    <string name="app_about">%1$s %2$s\nCopyright %3$s\nLicensed under the Apache License, Version 2.0.\ngithub.com/trixon/android-confqual</string>
 
 </resources>
