--- a/res/layout/fragment_qualifier_detail.xml
+++ b/res/layout/fragment_qualifier_detail.xml
@@ -6,33 +6,18 @@
     android:padding="16dp" >
 
     <TextView
-        android:id="@+id/textViewKey"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/configuration"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
         android:id="@+id/key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewKey"
         android:text="@string/value_na"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/textViewValue"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/key"
-        android:text="@string/qualifier_value"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/detail_header" />
 
     <TextView
         android:id="@+id/value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textViewValue"
+        android:layout_below="@+id/key"
         android:text="@string/value_na"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -42,7 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/value"
         android:text="@string/description"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/detail_header" />
 
     <WebView
         android:id="@+id/webView"
