--- a/res/layout/list_item.xml
+++ b/res/layout/list_item.xml
@@ -10,7 +10,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:text="key"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textColor="@color/detail_header" />
 
     <TextView
         android:id="@+id/value"
@@ -19,6 +20,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/key"
         android:layout_marginLeft="14dp"
-        android:text="value" />
+        android:text="value"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
