--- a/res/values/items.xml
+++ b/res/values/items.xml
@@ -1,5 +1,6 @@
 <resources>
 
+    <string name="key_introduction">Configuration Qualifiers</string>
     <string name="key_mcc_mnc">Mobile country/network code</string>
     <string name="key_locale">Language and region</string>
     <string name="key_smallest_width">Smallest width</string>
@@ -17,6 +18,7 @@
     <string name="key_navkey">Navigation key availability</string>
     <string name="key_nontouchnav">Primary non-touch navigation method</string>
     <string name="key_api">Platform Version (API level)</string>
+    <string name="value_introduction">An introduction</string>
     <string name="value_dockmode">-</string>
     <string name="value_navkey">-</string>
     <string name="value_nightmode">-</string>
